k8s/bases/jaeger-operator/helm.yaml
---
# Source: jaeger-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-jaeger-operator-metrics
  labels:
    
    app.kubernetes.io/name: jaeger-operator
spec:
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app.kubernetes.io/name: jaeger-operator
    app.kubernetes.io/instance: izel
  type: ClusterIP
---
# Source: jaeger-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-jaeger-operator
  labels:
    
    app.kubernetes.io/name: jaeger-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      
      app.kubernetes.io/name: jaeger-operator
  template:
    metadata:
      name: izel-jaeger-operator
      labels:
        
        app.kubernetes.io/name: jaeger-operator
    spec:
      serviceAccountName: izel-jaeger-operator
      containers:
        - name: izel-jaeger-operator
          image: "jaegertracing/jaeger-operator:1.17.1"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8383
            name: metrics
          args: ["start"]
          resources:
            {}
